<resources>
    <string name="app_name">Real Instant Foods</string>
    <string name="AdminUsername">admin123</string>
    <string name="AdminPassword">12345</string>
    <string name="QualityUsername">quality123</string>
    <string name="QualityPassword">12345</string>
    <string name="OperatorsUsername">operator123</string>
    <string name="OperatorsPassword">12345</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="quantity">Quantity</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="submit">SUBMIT</string>
    <string name="company">Company</string>
    <string name="bill_no">Bill No</string>
    <string name="item">Item</string>
    <string name="stock">Stock</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

</resources>
