<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProcessingFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Processing"
        android:textColor="@android:color/black"
        android:textSize="@dimen/largetext"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/quantity_edittext"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/rejected_edittext"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Rejection"
            android:inputType="numberDecimal"
            android:layout_margin="10dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/item"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:textSize="@dimen/mediumtext"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" />
            <Spinner
                android:id="@+id/itemsSpinner"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/startTime_edittext"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_time"
            android:inputType="time"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/endTime_edittext"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_time"
            android:inputType="time"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/date_edittext"
            android:layout_gravity="center"
            android:inputType="date"
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/processSubmit_button"
            style="@style/buttonStyle"
            android:layout_gravity="center"
            android:text="@string/submit" />
    </LinearLayout>
</LinearLayout>