<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adduser">
    
    <LinearLayout
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            android:layout_margin="@dimen/margin" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/margin" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Retype Password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/margin" />

        <Spinner
            android:id="@+id/typespinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/buttonStyle"
            android:id="@+id/sub"
            android:text="@string/submit"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>